--- a/package.json
+++ b/package.json
@@ -4,5 +4,60 @@
   "main": "index.js",
   "repository": "https://github.com/shizukesa92/URL-Shortener-Microservice.git",
   "author": "Leonard Tye <leonardtye1992@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+		"node": "9.7.1",
+		"npm": "5.8.0",
+		"yarn": "1.5.1"
+	},
+	"scripts": {
+		"start:prod": "node index.js",
+		"start": "nodemon index.js",
+		"dev": "webpack-dev-server --mode development --config webpack.config.prod.js",
+		"build": "webpack --env prod --progress --config webpack.config.prod.js",
+		"postinstall": "webpack --env prod --progress --config webpack.config.prod.js"
+	},
+	"dependencies": {
+		"babel-core": "^6.26.0",
+		"express": "^4.16.3",
+		"react": "^16.3.0",
+		"react-dom": "^16.3.0",
+		"react-redux": "^5.0.7",
+		"redux": "^3.7.2",
+		"redux-batched-actions": "^0.2.1",
+		"redux-thunk": "^2.2.0",
+		"sass-loader": "^6.0.7",
+		"style-loader": "^0.20.3"
+	},
+	"devDependencies": {
+		"autoprefixer": "^8.2.0",
+		"babel-loader": "^7.1.4",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-0": "^6.24.1",
+		"bootstrap": "^4.0.0",
+		"css-loader": "^0.28.11",
+		"html-webpack-plugin": "^3.1.0",
+		"jquery": "^3.3.1",
+		"mini-css-extract-plugin": "^0.4.0",
+		"moment": "^2.22.0",
+		"node-sass": "^4.8.3",
+		"postcss-loader": "^2.1.3",
+		"postcss-scss": "^1.0.5",
+		"precss": "^3.1.2",
+		"webpack": "^4.4.1",
+		"webpack-cli": "^2.0.13",
+		"webpack-dev-server": "^3.1.1",
+		"babel-eslint": "^8.2.2",
+		"eslint": "^4.19.1",
+		"eslint-config-airbnb": "^16.1.0",
+		"eslint-loader": "^2.0.0",
+		"eslint-plugin-babel": "^5.0.0",
+		"eslint-plugin-html": "^4.0.2",
+		"eslint-plugin-import": "^2.10.0",
+		"eslint-plugin-jsx-a11y": "^6.0.3",
+		"eslint-plugin-react": "^7.7.0",
+		"eslint-plugin-react-redux": "^2.3.0",
+		"html-loader": "^0.5.5"
+	}
 }
