--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"dotenv": "^5.0.1",
 		"express": "^4.16.3",
 		"mongodb": "^3.0.5",
+		"mongoose": "^5.0.13",
 		"react": "^16.3.0",
 		"react-dom": "^16.3.0",
 		"react-redux": "^5.0.7",
@@ -29,7 +30,9 @@
 		"redux-batched-actions": "^0.2.1",
 		"redux-thunk": "^2.2.0",
 		"sass-loader": "^6.0.7",
-		"style-loader": "^0.20.3"
+		"shortid": "^2.2.8",
+		"style-loader": "^0.20.3",
+		"valid-url": "^1.0.9"
 	},
 	"devDependencies": {
 		"autoprefixer": "^8.2.0",
