--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"dependencies": {
 		"babel-core": "^6.26.0",
+		"body-parser": "^1.18.2",
 		"dotenv": "^5.0.1",
 		"express": "^4.16.3",
 		"mongodb": "^3.0.5",
