--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
 		"body-parser": "^1.18.2",
 		"dotenv": "^5.0.1",
 		"express": "^4.16.3",
-		"mongodb": "^3.0.5",
-		"mongoose": "^5.0.13",
 		"react": "^16.3.0",
 		"react-dom": "^16.3.0",
 		"react-redux": "^5.0.7",
@@ -31,9 +29,11 @@
 		"redux-batched-actions": "^0.2.1",
 		"redux-thunk": "^2.2.0",
 		"sass-loader": "^6.0.7",
+		"mongoose": "^5.0.13",
 		"shortid": "^2.2.8",
 		"style-loader": "^0.20.3",
-		"valid-url": "^1.0.9"
+		"valid-url": "^1.0.9",
+		"mongodb": "^3.0.5"
 	},
 	"devDependencies": {
 		"autoprefixer": "^8.2.0",
@@ -57,7 +57,6 @@
 		"html-webpack-plugin": "^3.1.0",
 		"jquery": "^3.3.1",
 		"mini-css-extract-plugin": "^0.4.0",
-		"moment": "^2.22.0",
 		"node-sass": "^4.8.3",
 		"postcss-loader": "^2.1.3",
 		"postcss-scss": "^1.0.5",
